// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComposeFeedCard renders correctly when overlay is closed 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black opacity-50 dark:opacity-70 z-50 hidden"
    data-testid="overlay"
  />
  <div
    class="border dark:border-dark-500 rounded-xl bg-card"
  >
    <div
      class="flex flex-col gap-4"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="items-center justify-between text-muted-foreground w-full flex flex-row md:flex-row border-0 p-0 bg-gray-50 dark:bg-dark-500 rounded-t-xl gap-0"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-:r0:-content-publish"
          aria-selected="true"
          class="flex items-center md:w-64 h-10 whitespace-nowrap rounded-md text-sm font-medium font-roboto w-full px-4 py-2.5 justify-center border-b dark:text-slate-400 text-slate-500 dark:border-none hover:bg-gray-300 hover:border-gray-800 hover:dark:bg-dark-500 rounded-b-none data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:dark:text-neutral-200 data-[state=active]:text-neutral-500 rounded-tl-xl rounded-tr-[4px] data-[state=active]:rounded-es-[4px] data-[state=active]:border-r"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-:r0:-trigger-publish"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-pen-line mr-2"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20h9"
            />
            <path
              d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z"
            />
          </svg>
          Publish
        </button>
        <button
          aria-controls="radix-:r0:-content-albums"
          aria-selected="false"
          class="flex items-center md:w-64 h-10 whitespace-nowrap text-sm font-medium font-roboto w-full px-4 py-2.5 justify-center border-b dark:text-slate-400 text-slate-500 dark:border-none hover:bg-gray-300 hover:border-gray-800 hover:dark:bg-dark-500 data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:dark:text-neutral-200 data-[state=active]:text-neutral-500 rounded-none data-[state=active]:border-x data-[state=active]:rounded-t-[4px]"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r0:-trigger-albums"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-image mr-2"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          Albums
        </button>
        <button
          aria-controls="radix-:r0:-content-video"
          aria-selected="false"
          class="flex items-center md:w-64 h-10 whitespace-nowrap rounded-md text-sm font-medium font-roboto w-full px-4 py-2.5 justify-center border-b dark:text-slate-400 text-slate-500 dark:border-none hover:bg-gray-300 hover:border-gray-800 hover:dark:bg-dark-500 rounded-b-none data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:dark:text-neutral-200 data-[state=active]:text-neutral-500 rounded-t-[4px] data-[state=active]:border-x"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r0:-trigger-video"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-video mr-2"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
            />
            <rect
              height="12"
              rx="2"
              width="14"
              x="2"
              y="6"
            />
          </svg>
          Video
        </button>
        <div
          aria-controls="radix-:r0:-content-"
          aria-selected="false"
          class="flex items-center w-fit md:w-64 h-10 justify-start whitespace-nowrap rounded-md px-3 py-1.5 text-sm font-medium font-roboto data-[state=active]:shadow-lg data-[state=active]:bg-blue-400 data-[state=active]:text-white w-full px-4 py-2.5 justify-end border-b dark:border-none rounded-b-none data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:text-neutral-400"
          data-disabled=""
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          disabled=""
          id="radix-:r0:-trigger-"
          role="tab"
          tabindex="-1"
          type="button"
        />
      </div>
      <div
        aria-labelledby="radix-:r0:-trigger-publish"
        class="mt-2 w-full"
        data-orientation="horizontal"
        data-state="active"
        id="radix-:r0:-content-publish"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <form
          data-testid="compose-form"
        >
          <div
            class="border-b border-gray-600 dark:border-dark-500 p-4"
          >
            <div
              class="flex flex-row"
            >
              <span
                class="relative flex shrink-0 overflow-hidden rounded-full w-[42px] h-[42px]"
                data-testid="avatar"
              >
                <span
                  class="flex h-full w-full items-center justify-center rounded-full bg-muted"
                >
                  CN
                </span>
              </span>
              <div
                class="space-y-2 ml-5 w-full"
              >
                <textarea
                  aria-describedby=":r5:-form-item-description"
                  aria-invalid="false"
                  class="flex w-full rounded-md border border-input bg-card text-sm ring-offset-background placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50 border-none focus:outline-none min-h-[66px] p-0"
                  id=":r5:-form-item"
                  name="content"
                  placeholder="Write something about you..."
                />
              </div>
            </div>
          </div>
          <div
            class="flex gap-2.5 justify-start items-center p-2"
          >
            <div
              class="flex items-center bg-gray-200 dark:bg-dark-300 dark:text-slate-400 text-slate-600 hover:text-neutral-700 hover:dark:text-white px-4 py-[6px] rounded-full cursor-pointer"
            >
              <svg
                class="lucide lucide-camera"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
                />
                <circle
                  cx="12"
                  cy="13"
                  r="3"
                />
              </svg>
              <p
                class="text-xs px-2 dark:text-slate-400 text-slate-600"
              >
                Media
              </p>
              <div
                class="space-y-2"
              >
                <div
                  class="relative w-full flex items-center"
                  data-testid="input-container"
                >
                  <input
                    aria-describedby=":r6:-form-item-description"
                    aria-invalid="false"
                    aria-label="Upload Media Publish"
                    autocomplete="off"
                    class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
                    data-testid="input-element"
                    id="media-publish-upload"
                    type="file"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-center bg-gray-200 dark:bg-dark-300 dark:text-slate-400 text-slate-600 hover:text-neutral-700 hover:dark:text-white px-4 py-[6px] rounded-full cursor-pointer"
            >
              <svg
                class="w-5 h-5"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 12c0-6.629-5.371-12-12-12S0 5.371 0 12s5.371 12 12 12 12-5.371 12-12zm0 0"
                  fill="#ffc10e"
                />
                <path
                  d="M19.879 12.008a7.879 7.879 0 11-15.758 0zm0 0"
                  fill="#fff"
                />
                <path
                  d="M10.238 7.86a1.885 1.885 0 10-3.769.003 1.885 1.885 0 003.77-.004zm0 0M17.363 7.86a1.884 1.884 0 10-3.767.001 1.884 1.884 0 003.767-.002zm0 0"
                  fill="#333"
                />
              </svg>
              <p
                class="text-xs px-2 dark:text-slate-400 text-slate-600"
              >
                Activity
              </p>
            </div>
            <div
              class="flex items-center bg-gray-200 dark:bg-dark-300 dark:text-slate-400 text-slate-600 hover:text-neutral-700 hover:dark:text-white px-4 py-[6px] rounded-full cursor-pointer"
            >
              <svg
                class="lucide lucide-ellipsis"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`ComposeFeedCard renders correctly when overlay is open 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black opacity-50 dark:opacity-70 z-50 hidden"
    data-testid="overlay"
  />
  <div
    class="border dark:border-dark-500 rounded-xl bg-card"
  >
    <div
      class="flex flex-col gap-4"
      data-orientation="horizontal"
      dir="ltr"
    >
      <div
        aria-orientation="horizontal"
        class="items-center justify-between text-muted-foreground w-full flex flex-row md:flex-row border-0 p-0 bg-gray-50 dark:bg-dark-500 rounded-t-xl gap-0"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-:r7:-content-publish"
          aria-selected="true"
          class="flex items-center md:w-64 h-10 whitespace-nowrap rounded-md text-sm font-medium font-roboto w-full px-4 py-2.5 justify-center border-b dark:text-slate-400 text-slate-500 dark:border-none hover:bg-gray-300 hover:border-gray-800 hover:dark:bg-dark-500 rounded-b-none data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:dark:text-neutral-200 data-[state=active]:text-neutral-500 rounded-tl-xl rounded-tr-[4px] data-[state=active]:rounded-es-[4px] data-[state=active]:border-r"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-:r7:-trigger-publish"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-pen-line mr-2"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 20h9"
            />
            <path
              d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z"
            />
          </svg>
          Publish
        </button>
        <button
          aria-controls="radix-:r7:-content-albums"
          aria-selected="false"
          class="flex items-center md:w-64 h-10 whitespace-nowrap text-sm font-medium font-roboto w-full px-4 py-2.5 justify-center border-b dark:text-slate-400 text-slate-500 dark:border-none hover:bg-gray-300 hover:border-gray-800 hover:dark:bg-dark-500 data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:dark:text-neutral-200 data-[state=active]:text-neutral-500 rounded-none data-[state=active]:border-x data-[state=active]:rounded-t-[4px]"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r7:-trigger-albums"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-image mr-2"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
          Albums
        </button>
        <button
          aria-controls="radix-:r7:-content-video"
          aria-selected="false"
          class="flex items-center md:w-64 h-10 whitespace-nowrap rounded-md text-sm font-medium font-roboto w-full px-4 py-2.5 justify-center border-b dark:text-slate-400 text-slate-500 dark:border-none hover:bg-gray-300 hover:border-gray-800 hover:dark:bg-dark-500 rounded-b-none data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:dark:text-neutral-200 data-[state=active]:text-neutral-500 rounded-t-[4px] data-[state=active]:border-x"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-:r7:-trigger-video"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <svg
            class="lucide lucide-video mr-2"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m16 13 5.223 3.482a.5.5 0 0 0 .777-.416V7.87a.5.5 0 0 0-.752-.432L16 10.5"
            />
            <rect
              height="12"
              rx="2"
              width="14"
              x="2"
              y="6"
            />
          </svg>
          Video
        </button>
        <div
          aria-controls="radix-:r7:-content-"
          aria-selected="false"
          class="flex items-center w-fit md:w-64 h-10 justify-start whitespace-nowrap rounded-md px-3 py-1.5 text-sm font-medium font-roboto data-[state=active]:shadow-lg data-[state=active]:bg-blue-400 data-[state=active]:text-white w-full px-4 py-2.5 justify-end border-b dark:border-none rounded-b-none data-[state=active]:border-b-card data-[state=active]:shadow-none data-[state=active]:bg-white data-[state=active]:dark:bg-dark-800 data-[state=active]:text-neutral-400"
          data-disabled=""
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          disabled=""
          id="radix-:r7:-trigger-"
          role="tab"
          tabindex="-1"
          type="button"
        />
      </div>
      <div
        aria-labelledby="radix-:r7:-trigger-publish"
        class="mt-2 w-full"
        data-orientation="horizontal"
        data-state="active"
        id="radix-:r7:-content-publish"
        role="tabpanel"
        style="animation-duration: 0s;"
        tabindex="0"
      >
        <form
          data-testid="compose-form"
        >
          <div
            class="border-b border-gray-600 dark:border-dark-500 p-4"
          >
            <div
              class="flex flex-row"
            >
              <span
                class="relative flex shrink-0 overflow-hidden rounded-full w-[42px] h-[42px]"
                data-testid="avatar"
              >
                <span
                  class="flex h-full w-full items-center justify-center rounded-full bg-muted"
                >
                  CN
                </span>
              </span>
              <div
                class="space-y-2 ml-5 w-full"
              >
                <textarea
                  aria-describedby=":rc:-form-item-description"
                  aria-invalid="false"
                  class="flex w-full rounded-md border border-input bg-card text-sm ring-offset-background placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50 border-none focus:outline-none min-h-[66px] p-0"
                  id=":rc:-form-item"
                  name="content"
                  placeholder="Write something about you..."
                />
              </div>
            </div>
          </div>
          <div
            class="flex gap-2.5 justify-start items-center p-2"
          >
            <div
              class="flex items-center bg-gray-200 dark:bg-dark-300 dark:text-slate-400 text-slate-600 hover:text-neutral-700 hover:dark:text-white px-4 py-[6px] rounded-full cursor-pointer"
            >
              <svg
                class="lucide lucide-camera"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"
                />
                <circle
                  cx="12"
                  cy="13"
                  r="3"
                />
              </svg>
              <p
                class="text-xs px-2 dark:text-slate-400 text-slate-600"
              >
                Media
              </p>
              <div
                class="space-y-2"
              >
                <div
                  class="relative w-full flex items-center"
                  data-testid="input-container"
                >
                  <input
                    aria-describedby=":rd:-form-item-description"
                    aria-invalid="false"
                    aria-label="Upload Media Publish"
                    autocomplete="off"
                    class="h-10 w-full rounded-lg border border-input bg-white dark:bg-dark-500 px-3 py-2 text-sm file:border-0 file:bg-transparent file:text-xs file:font-medium file:text-foreground placeholder:text-muted-foreground outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
                    data-testid="input-element"
                    id="media-publish-upload"
                    type="file"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex items-center bg-gray-200 dark:bg-dark-300 dark:text-slate-400 text-slate-600 hover:text-neutral-700 hover:dark:text-white px-4 py-[6px] rounded-full cursor-pointer"
            >
              <svg
                class="w-5 h-5"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 12c0-6.629-5.371-12-12-12S0 5.371 0 12s5.371 12 12 12 12-5.371 12-12zm0 0"
                  fill="#ffc10e"
                />
                <path
                  d="M19.879 12.008a7.879 7.879 0 11-15.758 0zm0 0"
                  fill="#fff"
                />
                <path
                  d="M10.238 7.86a1.885 1.885 0 10-3.769.003 1.885 1.885 0 003.77-.004zm0 0M17.363 7.86a1.884 1.884 0 10-3.767.001 1.884 1.884 0 003.767-.002zm0 0"
                  fill="#333"
                />
              </svg>
              <p
                class="text-xs px-2 dark:text-slate-400 text-slate-600"
              >
                Activity
              </p>
            </div>
            <div
              class="flex items-center bg-gray-200 dark:bg-dark-300 dark:text-slate-400 text-slate-600 hover:text-neutral-700 hover:dark:text-white px-4 py-[6px] rounded-full cursor-pointer"
            >
              <svg
                class="lucide lucide-ellipsis"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="19"
                  cy="12"
                  r="1"
                />
                <circle
                  cx="5"
                  cy="12"
                  r="1"
                />
              </svg>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
